--- a/tinker/faculty_bio/templates/faculty-bio-confirm.html
+++ b/tinker/faculty_bio/templates/faculty-bio-confirm.html
@@ -1,15 +1,13 @@
 {% extends "tinker_base.html" %}
 
-{% block title %}Congrats!{% endblock %}
-
-
+{% set title = 'Faculty Bios' %}
 
 {% block main_content %}
     <div class="content">
         <div class="container-fluid">
             <div class="col-md-12">
                 <input type="hidden" id="faculty_bio_id" value="{{ faculty_bio_id }}"/>
-                <h1>Congrats!</h1>
+                <h1 class="first-subtitle">Congrats!</h1>
                 {% if status == 'new' %}
                     <p>You've successfully created a new bio. Your brand new bio has been sent for approval but will be
                         ready to view in 2-3 business days.</p>
