--- a/tinker/faculty_bio/templates/faculty-bio-home.html
+++ b/tinker/faculty_bio/templates/faculty-bio-home.html
@@ -59,11 +59,12 @@
             <div class="col-md-12">
                 {% if show_create %}
                     <a href="/faculty-bio/new#page-title" class="btn btn-primary">Create New Bio</a>
+                    <hr/>
                 {% endif %}
                 {% if show_special_admin_view %}
                     {# add extra sorting buttons #}
                     <div>
-                        <label><h3>View:</h3>
+                        <label><h3 class="first-subtitle">View:</h3>
                             <select class="horizontal-scroll" size="{{ all_schools|length }}" id="school-selector"
                                     multiple>
                                 {% for schools in all_schools %}
