--- a/tinker/faculty_bio/templates/faculty-bio-in-workflow.html
+++ b/tinker/faculty_bio/templates/faculty-bio-in-workflow.html
@@ -1,22 +1,26 @@
 {% extends "tinker_base.html" %}
 
-{% block title %}Pending Approval{% endblock %}
+{% set title = 'Faculty Bios' %}
 
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
 
-  <div class="row">
-    <div class="large-12 columns">
+    <div class="content">
+        <div class="container-fluid">
+            <div class="col-md-12">
 
-        <h3>
-          Edits Pending Approval
-        </h3>
+                <h3>
+                    Edits Pending Approval
+                </h3>
 
-        <p>You recently made edits to your bio and are currently pending approval. Please wait until the changes have been approved before you make additional edits. Go back to your <a href="{{ url_for('faculty-bio.FacultyBioView:index') }}">faculty bios</a>.</p>
+                <p>You recently made edits to your bio and are currently pending approval. Please wait until the changes
+                    have been approved before you make additional edits. Go back to your <a
+                            href="{{ url_for('faculty-bio.FacultyBioView:index') }}">faculty bios</a>.</p>
 
 
+            </div>
+        </div>
     </div>
-  </div>
 
 {% endblock %}
